--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -558,5 +558,6 @@
 	"Port number": "Port number",
 	"OGR static data file": "OGR static data file",
 	"Output format is required": "Output format is required",
-	"It should have at least one dcp": "It should have at least one dcp"
+	"It should have at least one dcp": "It should have at least one dcp",
+	"Lightning occurrence": "Lightning occurrence"
 }
