Change crop to crop_raster, fix label to set crop

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -560,5 +560,5 @@
 	"Output format is required": "Output format is required",
 	"It should have at least one dcp": "It should have at least one dcp",
 	"Lightning occurrence": "Lightning occurrence",
-	"Crop": "Crop"
+	"Crop raster": "Crop raster"
 }
