Allow grad dataseries select band on intersection, changed intersection screen

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -578,5 +578,10 @@
 				}
 			}
 		}
-	}
+	},
+	"Select Static DataSeries": "Select Static DataSeries",
+	"Select Attibutes": "Select Attibutes",
+	"Select attributes": "Select attributes",
+	"Band": "Band",
+	"Close": "Close"
 }
