Change to front run the process when save and run a dynamic data series, show message if an error occurred to start the process

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -583,5 +583,7 @@
 	"Select Attibutes": "Select Attibutes",
 	"Select attributes": "Select attributes",
 	"Band": "Band",
-	"Close": "Close"
+	"Close": "Close",
+	"is not active": "is not active",
+	". The process was started successfully": ". The process was started successfully"
 }
