Updating, adding and removing data set when update a dcp data series

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -585,5 +585,6 @@
 	"Band": "Band",
 	"Close": "Close",
 	"is not active": "is not active",
-	". The process was started successfully": ". The process was started successfully"
+	". The process was started successfully": ". The process was started successfully",
+	"DCP error": "DCP error"
 }
