--- a/webapp/locales/en.json
+++ b/webapp/locales/en.json
@@ -1,3 +1,4 @@
 {
-	"DataSeries": "DataSeries"
+	"DataSeries": "DataSeries",
+	"Data Server protocol is required": "Data Server protocol is required"
 }
