Sorting dataSeriesGroup to select in analysis

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -586,5 +586,6 @@
 	"Close": "Close",
 	"is not active": "is not active",
 	". The process was started successfully": ". The process was started successfully",
-	"DCP error": "DCP error"
+	"DCP error": "DCP error",
+	"Project Status": "Project Status"
 }
