--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -587,5 +587,7 @@
 	"is not active": "is not active",
 	". The process was started successfully": ". The process was started successfully",
 	"DCP error": "DCP error",
-	"Project Status": "Project Status"
+	"Project Status": "Project Status",
+	"It performs Analysis Validation in order to check if it will able to generate a valid data series": "It performs Analysis Validation in order to check if it will able to generate a valid data series",
+	"Schedule Type is required": "Schedule Type is required"
 }
