Translating table header, fix some portuguese translate

--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -15,7 +15,7 @@
 	"Edit": "Editar",
 	"Remove": "Remover",
 	"Data Sets": "Conjuntos de Dados",
-	"Occurrence": "Occurrência",
+	"Occurrence": "Ocorrência",
 	"PCD": "PCD",
 	"GRID": "GRADE",
 	"Version": "Versão",
@@ -127,7 +127,7 @@
 	"Select the analysis to user": "Selecione a análise para o usuário",
 	"Alert Notification": "Notificação de Alerta",
 	"Report": "Reportar",
-	"Area of interest for notification": "Área of interesse para notificação",
+	"Area of interest for notification": "Área de interesse para notificação",
 	"Select Area of Interest": "Selecione Área de Interesse",
 	"Cell phone": "Celular",
 	"User cell phone number": "Múmero de celular do usuário",
@@ -265,7 +265,7 @@
 	"Alias": "Pseudônimo",
 	"Influence Data Series": "Influência da Série de Dados",
 	"Influence Attribute": "Atributo de Influência",
-	"Ssh Connection": "Conecção Ssh",
+	"Ssh Connection": "Conexão Ssh",
 	"Service Data": "Serviço de Dados",
 	"Log Configuration": "Configuração do Log",
 	"Database Name": "Nome da Base de Dados",
@@ -295,7 +295,7 @@
 	"Additional Data": "Dado Adicional",
 	"DataSeries": "Série de Dados",
 	"Data Series is required": "Série de Dados é requerida",
-	"Select the DataSeries": "Slecione a Série de Dados",
+	"Select the DataSeries": "Selecione a Série de Dados",
 	"Attribute Identifier": "Atributo Identificador",
 	"Type attribute identifier of Monitored Object": "Digite atributo identificador do Objeto Monitorado",
 	"Connection": "Conecção",
@@ -350,7 +350,7 @@
 	"Removal Confirmation": "Confirmação da remoção",
 	"Advanced": "Avançado",
 	"No project found": "Nenhum projeto encontrado",
-	"Are you sure?": "Você está certo ?",
+	"Are you sure?": "Você está certo?",
 	"Add new": "Adicionar novo",
 	"No data found": "Nenhum dado encontrado",
 	"No data provider found": "Nenhum servidor de dados encontrado",
@@ -458,7 +458,7 @@
 	"Run": "Executar",
 	"Remove data": "Remover dados",
 	"Unconfigured GraDs Data Series storage": "Não configurado armazenamento de série de dados GraDs",
-	"All rights reserved": "All rights reserved",
+	"All rights reserved": "Todos os direitos reservados",
 	"Data Server": "Servidor de Dados",
 	"Grid": "Grade",
 	"Data Registration": "Registro de Dados",
@@ -491,9 +491,10 @@
 	"File static data": "Arquivo de Dado Estático",
 	"PostGIS static data": "Dado Estático PostGIS",
 	"Message": "Mensagem",
-	"Save": "Save",
-	"Save and Run": "Save and Run",
-	"PostGIS occurrence": "PostGIS occurrence",
-	"Lightning occurrence": "Lightning occurrence",
-	"Output format is required": "Output format is required"
+	"Save": "Salvar",
+	"Save and Run": "Salvar e executar",
+	"PostGIS occurrence": "Ocorrência PostGIS",
+	"Lightning occurrence": "Ocorrência de raios",
+	"Output format is required": "Formato de saída é obrigatório",
+	"Project Status": "Project Status"
 }
