--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -496,5 +496,55 @@
 	"PostGIS occurrence": "Ocorrência PostGIS",
 	"Lightning occurrence": "Ocorrência de raios",
 	"Output format is required": "Formato de saída é obrigatório",
-	"Project Status": "Project Status"
+	"Project Status": "Status do Projeto",
+	"Nome": "Nome",
+	"Tipo": "Tipo",
+	"Select Static DataSeries": "Selecione uma série de dados estático",
+	"Close": "Fechar",
+	"Schedule Type is required": "Tipo de agendamento é obrigatório",
+	"Add intersection configuration": "Adicione configuração de interseção",
+	"Must have a valid store values to create an intersection": "Configuração de armazenamento deve ser válida para criar interseção",
+	"Add store configuration": "Adicione configuração de armazenamento",
+	"Remove store configuration": "Remova configuração de armazenamento",
+	"Remove filter configuration": "Remova configuração de filtro",
+	"Projection SRID": "Projeção SRID",
+	"Remove intersection configuration": "Remova configuração de interseção",
+	"Select attributes": "Selecione atributos",
+	"Band": "Banda",
+	"Add filter configuration": "Adicione configuração de filtro",
+	"It performs Analysis Validation in order to check if it will able to generate a valid data series": "Executa Validação de Análise para verificar se pode gerar uma série de dados válido",
+	"OGR static data file": "Árquivo estático OGR",
+	"Static GeoTIFF grid": "Grade estático GeoTIFF",
+	"Nearest Neighbor": "Vizinho mais próximo",
+	"Bi linear": "Bi linear",
+	"Bi cubic": "Bi cúbico",
+	"Union": "União",
+	"Same from data series": "Mesmo da série de dados",
+	"Custom": "Personalizada",
+	"Smallest grid": "Grade menor",
+	"Biggest grid": "Grade maior",
+	"Line Stroke Width": "Largura da linha",
+	"Line Stroke Width is required for View data series": "Largura da linha é obrigatório para visualição da série de dados",
+	"Color": "Cor",
+	"Polygon Stroke Width": "Largura do polígono",
+	"Polygon Stroke Width is required for View data series": "Largura do polígono é obrigatório para visualição da série de dados",
+	"Point Size": "Tamanho do ponto",
+	"Point Size is required for View data series": "Tamanho do ponto é obrigatório para visualição da série de dados",
+	"Min value": "Valor mínimo",
+	"Min value is required for GRID data series": "Valor mínimo é obrigatório para série de dados GRID",
+	"Max value": "Valor máximo",
+	"Max value is required for GRID data series": "Valor máximo é obrigatório para série de dados GRID",
+	"Checking": {
+		"": {
+			"": {
+				"": "Verificando..."
+			}
+		}
+	},
+	"Collector": "Coletor",
+	"Maps Server Parameters": "Parâmetros do servidor de mapas",
+	"Maps Server URI": "URI do servidor de mapas",
+	"Maps Server URI is required for View Services": "URI do servidor de mapas é obrigatório para serviço de visualização",
+	"Port number": "Número da porta",
+	"Local Service": "Serviço local"
 }
