Service to translate schema form

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -608,5 +608,9 @@
 	"Custom": "Custom",
 	"Smallest grid": "Smallest grid",
 	"Biggest grid": "Biggest grid",
-	"Local Service": "Local Service"
+	"Local Service": "Local Service",
+	"Table Name": "Table Name",
+	"SRID": "SRID",
+	"Table_name": "Table name",
+	"Folder": "Folder"
 }
