Some pt_br translate

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -614,5 +614,6 @@
 	"Table_name": "Table name",
 	"Folder": "Folder",
 	"Filter by static data": "Filter by static data",
-	"Data series is required": "Data series is required"
+	"Data series is required": "Data series is required",
+	"Cellphone": "Cellphone"
 }
