--- a/webapp/locales/en.json
+++ b/webapp/locales/en.json
@@ -1,4 +1,5 @@
 {
 	"DataSeries": "DataSeries",
-	"Data Server protocol is required": "Data Server protocol is required"
+	"Data Server protocol is required": "Data Server protocol is required",
+	"404 not found": "404 not found"
 }
