Style form pt_BR translations

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -618,5 +618,24 @@
 	"Cellphone": "Cellphone",
 	"Select the Collector Service to be Used": "Select the Collector Service to be Used",
 	"Select the Analysis Service to be Used": "Select the Analysis Service to be Used",
-	"Select the View Service to be Used": "Select the View Service to be Used"
+	"Select the View Service to be Used": "Select the View Service to be Used",
+	"Operation": "Operation",
+	"Operation is required": "Operation is required",
+	"INTERVAL": "INTERVAL",
+	"VALUE": "VALUE",
+	"Type is required": "Type is required",
+	"Number of Colors": "Number of Colors",
+	"Number of Colors is required": "Number of Colors is required",
+	"Minimum 2": "Minimum 2",
+	"Begin": "Begin",
+	"End": "End",
+	"Generate": "Generate",
+	"Title": "Title",
+	"Value": "Value",
+	"Column": "Column",
+	"Column is required": "Column is required",
+	"Title is required": "Title is required",
+	"Value is required": "Value is required",
+	"Value must be a number": "Value must be a number",
+	"Value must be unique": "Value must be unique"
 }
