--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -569,5 +569,33 @@
 	"Cellphone": "Telefone",
 	"Data Import": "Importação de dados",
 	"Connection Status": "Status de conexão",
-	"Connection Successful": "Conexão sucedida"
+	"Connection Successful": "Conexão sucedida",
+	"Operation": "Operação",
+	"Operation is required": "Operação é requerida",
+	"Type is required": "Tipo é requerido",
+	"Number of Colors": "Número de cores",
+	"Number of Colors is required": "Número de cores é requerido",
+	"Minimum 2": "Mínimo 2",
+	"Begin": "Início",
+	"End": "Fim",
+	"Generate": "Gerar",
+	"Title": "Título",
+	"Value": "Valor",
+	"View Update": "Atualização da visualização",
+	"Dummy Value": "Valor nulo",
+	"Band Number": "Número da banda",
+	"Band number is required": "Número da banda é requerido",
+	"Title is required": "Título é requerido",
+	"Value is required": "Valor é requerido",
+	"Value must be a number": "Valor deve ser um número",
+	"Value must be unique": "Valor deve ser único",
+	"Column": "Coluna",
+	"Column is required": "Coluna é requerido",
+	"INTERVAL": "INTERVALO",
+	"VALUE": "VALOR",
+	"RAMP": "GRADIENTE",
+	"Select the Collector Service to be Used": "Selecione o serviço de coleta para ser usado",
+	"Select the Analysis Service to be Used": "Selecione o serviço de análise para ser usado",
+	"Select the View Service to be Used": "Selecione o serviço de visualização para ser usado",
+	"is not active": "não está ativo"
 }
