TerraMA2 schema form addon to validate mask pattern

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -637,5 +637,6 @@
 	"Title is required": "Title is required",
 	"Value is required": "Value is required",
 	"Value must be a number": "Value must be a number",
-	"Value must be unique": "Value must be unique"
+	"Value must be unique": "Value must be unique",
+	"Files can be overwritten": "Files can be overwritten"
 }
