--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -645,5 +645,7 @@
 	"RAMP": "RAMP",
 	"Dummy Value": "Dummy Value",
 	"Band Number": "Band Number",
-	"Band number is required": "Band number is required"
+	"Band number is required": "Band number is required",
+	"Service not active": "Service not active",
+	"Generic Format for CSV files": "Generic Format for CSV files"
 }
