Form to configure csv format

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -647,5 +647,27 @@
 	"Band Number": "Band Number",
 	"Band number is required": "Band number is required",
 	"Service not active": "Service not active",
-	"Generic Format for CSV files": "Generic Format for CSV files"
+	"Generic Format for CSV files": "Generic Format for CSV files",
+	"GDAL raster": "GDAL raster",
+	"DCP CSV": "DCP CSV",
+	"Occurrence CSV": "Occurrence CSV",
+	"Projection (SRID)": "Projection (SRID)",
+	"CSV Format": "CSV Format",
+	"CTL File": "CTL File",
+	"Number of Bands": "Number of Bands",
+	"Multiplier": "Multiplier",
+	"Data Type": "Data Type",
+	"Binary File Mask": "Binary File Mask",
+	"Bytes Before": "Bytes Before",
+	"Bytes After": "Bytes After",
+	"Temporal": "Temporal",
+	"Time Interval": "Time Interval",
+	"Time Interval Unit": "Time Interval Unit",
+	"Header size": "Header size",
+	"Properties name lines": "Properties name lines",
+	"Convert all": "Convert all",
+	"Properties name line": "Properties name line",
+	"Fields": "Fields",
+	"Default type": "Default type",
+	"Property name": "Property name"
 }
