Create conditional schedule model and adapting view registration to accept conditional schedule

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -672,5 +672,7 @@
 	"Property name": "Property name",
 	"Point (Geometry)": "Point (Geometry)",
 	"Number": "Number",
-	"Text": "Text"
+	"Text": "Text",
+	"Database": "Database",
+	"Conditional": "Conditional"
 }
