Adapting data series CRUD to accept manual schedule

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -674,5 +674,6 @@
 	"Number": "Number",
 	"Text": "Text",
 	"Database": "Database",
-	"Conditional": "Conditional"
+	"Conditional": "Conditional",
+	"Static GDAL grid": "Static GDAL grid"
 }
