--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -679,5 +679,6 @@
 	"Invalid format": "Invalid format",
 	"Invalid alias": "Invalid alias",
 	"Static GDAL grid": "Static GDAL grid",
-	"Monitored object": "Monitored object"
+	"Monitored object": "Monitored object",
+	"Analysis Grid": "Analysis Grid"
 }
