--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -682,5 +682,6 @@
 	"Invalid alias": "Invalid alias",
 	"Static GDAL grid": "Static GDAL grid",
 	"Monitored object": "Monitored object",
-	"Analysis Grid": "Analysis Grid"
+	"Analysis Grid": "Analysis Grid",
+	"name": "name"
 }
