[Partial] Saving alert on db

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -683,5 +683,24 @@
 	"Static GDAL grid": "Static GDAL grid",
 	"Monitored object": "Monitored object",
 	"Analysis Grid": "Analysis Grid",
-	"name": "name"
+	"name": "name",
+	"Data Server Timeout": "Data Server Timeout",
+	"Alert Name": "Alert Name",
+	"Alert name is required": "Alert name is required",
+	"Service Name": "Service Name",
+	"Risk attribute": "Risk attribute",
+	"Risk attribute is required": "Risk attribute is required",
+	"Risk Level": "Risk Level",
+	"Risk Level Name": "Risk Level Name",
+	"Risk Level Description": "Risk Level Description",
+	"Risk Name": "Risk Name",
+	"Risk Value": "Risk Value",
+	"Alert Description": "Alert Description",
+	"Report Description": "Report Description",
+	"Notification": "Notification",
+	"Email": "Email",
+	"Include report": "Include report",
+	"Notify on change": "Notify on change",
+	"Simplified Report": "Simplified Report",
+	"Data Server timeout is required": "Data Server timeout is required"
 }
