Change alert models

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -704,5 +704,40 @@
 	"Simplified Report": "Simplified Report",
 	"Data Server timeout is required": "Data Server timeout is required",
 	"Data server Timeout": "Data server Timeout",
-	"Active mode": "Active mode"
+	"Active mode": "Active mode",
+	"Risks": "Risks",
+	"New Risk": "New Risk",
+	"Risco 1": "Risco 1",
+	"Risco 2": "Risco 2",
+	"Risco 3": "Risco 3",
+	"Risk Description": "Risk Description",
+	"The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled": "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled",
+	"New Level": "New Level",
+	"Report title is required": "Report title is required",
+	"Emails": "Emails",
+	"Notification emails is required": "Notification emails is required",
+	"Obs": " enter the addresses separated by semicolons",
+	"Include Report": "Include Report",
+	"Select a report type": "Select a report type",
+	"Notify on risk level": "Notify on risk level",
+	"Select a level": "Select a level",
+	"Level Name": "Level Name",
+	"N": "N",
+	"Nov": "Nov",
+	"Novo": "Novo",
+	"Novo r": "Novo r",
+	"Novo ri": "Novo ri",
+	"Novo ris": "Novo ris",
+	"Novo risc": "Novo risc",
+	"Novo risco": "Novo risco",
+	"R": "R",
+	"Ri": "Ri",
+	"Ris": "Ris",
+	"Risc": "Risc",
+	"Risco": "Risco",
+	"Risco T": "Risco T",
+	"Risco To": "Risco To",
+	"Risco Tot": "Risco Tot",
+	"Risco Tota": "Risco Tota",
+	"Risco Total": "Risco Total"
 }
