Remove link to edit

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -739,5 +739,12 @@
 	"Risco To": "Risco To",
 	"Risco Tot": "Risco Tot",
 	"Risco Tota": "Risco Tota",
-	"Risco Total": "Risco Total"
+	"Risco Total": "Risco Total",
+	"Report Title": "Report Title",
+	"n": "n",
+	"no": "no",
+	"nom": "nom",
+	"nomb": "nomb",
+	"nombr": "nombr",
+	"nombre": "nombre"
 }
