--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -746,5 +746,8 @@
 	"nom": "nom",
 	"nomb": "nomb",
 	"nombr": "nombr",
-	"nombre": "nombre"
+	"nombre": "nombre",
+	"Risco de fogo": "Risco de fogo",
+	"Alert": "Alert",
+	"Risco de fogo up": "Risco de fogo up"
 }
