[Partial] Updating risk

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -749,5 +749,6 @@
 	"nombre": "nombre",
 	"Risco de fogo": "Risco de fogo",
 	"Alert": "Alert",
-	"Risco de fogo up": "Risco de fogo up"
+	"Risco de fogo up": "Risco de fogo up",
+	"Novo risk": "Novo risk"
 }
