[Partial] Updating alert

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -750,5 +750,6 @@
 	"Risco de fogo": "Risco de fogo",
 	"Alert": "Alert",
 	"Risco de fogo up": "Risco de fogo up",
-	"Novo risk": "Novo risk"
+	"Novo risk": "Novo risk",
+	"New Risk gfd": "New Risk gfd"
 }
