--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -707,9 +707,6 @@
 	"Active mode": "Active mode",
 	"Risks": "Risks",
 	"New Risk": "New Risk",
-	"Risco 1": "Risco 1",
-	"Risco 2": "Risco 2",
-	"Risco 3": "Risco 3",
 	"Risk Description": "Risk Description",
 	"The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled": "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled",
 	"New Level": "New Level",
@@ -721,35 +718,5 @@
 	"Select a report type": "Select a report type",
 	"Notify on risk level": "Notify on risk level",
 	"Select a level": "Select a level",
-	"Level Name": "Level Name",
-	"N": "N",
-	"Nov": "Nov",
-	"Novo": "Novo",
-	"Novo r": "Novo r",
-	"Novo ri": "Novo ri",
-	"Novo ris": "Novo ris",
-	"Novo risc": "Novo risc",
-	"Novo risco": "Novo risco",
-	"R": "R",
-	"Ri": "Ri",
-	"Ris": "Ris",
-	"Risc": "Risc",
-	"Risco": "Risco",
-	"Risco T": "Risco T",
-	"Risco To": "Risco To",
-	"Risco Tot": "Risco Tot",
-	"Risco Tota": "Risco Tota",
-	"Risco Total": "Risco Total",
-	"Report Title": "Report Title",
-	"n": "n",
-	"no": "no",
-	"nom": "nom",
-	"nomb": "nomb",
-	"nombr": "nombr",
-	"nombre": "nombre",
-	"Risco de fogo": "Risco de fogo",
-	"Alert": "Alert",
-	"Risco de fogo up": "Risco de fogo up",
-	"Novo risk": "Novo risk",
-	"New Risk gfd": "New Risk gfd"
+	"Level Name": "Level Name"
 }
