fixing http method calls

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -720,5 +720,33 @@
 	"Select a level": "Select a level",
 	"Level Name": "Level Name",
 	"Alert": "Alert",
-	"Report Title": "Report Title"
+	"Report Title": "Report Title",
+	"Import CSV": "Import CSV",
+	"Delimiter character": "Delimiter character",
+	"The first line is a header?": "The first line is a header?",
+	"Format (once selected, it can't be changed)": "Format (once selected, it can't be changed)",
+	"Format (once selected, it can&#39;t be changed)": "Format (once selected, it can&#39;t be changed)",
+	"Default": "Default",
+	"Prefix": "Prefix",
+	"Select a column": "Select a column",
+	"Suffix": "Suffix",
+	"Showing": "Showing",
+	"No data available in table": "No data available in table",
+	"Select a value": "Select a value",
+	"Enter default value": "Enter default value",
+	"Leave it empty": "Leave it empty",
+	"filtered from": "filtered from",
+	"Showing 0 to 0 of 0 entries": "Showing 0 to 0 of 0 entries",
+	"entries": "entries",
+	"to": "to",
+	"of": "of",
+	"Loading": "Loading",
+	"Show": "Show",
+	"total entries": "total entries",
+	"Last": "Last",
+	"First": "First",
+	"DCP Import Process": "DCP Import Process",
+	"Import process executed with success, but there were duplicated Alias, check the values": "Import process executed with success, but there were duplicated Alias, check the values",
+	"Search": "Search",
+	"Processing": "Processing"
 }
