fixing translation bugs

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -748,17 +748,39 @@
 	"DCP Import Process": "DCP Import Process",
 	"Import process executed with success, but there were duplicated Alias, check the values": "Import process executed with success, but there were duplicated Alias, check the values",
 	"Search": "Search",
-	"Processing": "Processing",
-  	"Note: No storager configuration, this data will be accessed when needed.": "Note: No storager configuration, this data will be accessed when needed.",
-  	"Data Export": "Data Export",
-  	"Select the project to which you want to import the data": "Select the project to which you want to import the data",
-  	"No projects found.": "No projects found.",
-  	"check all items": "check all items",
-  	"Select the Alert Service to be Used": "Select the Alert Service to be Used",
-  	"To import this file you need to have at least one project": "To import this file you need to have at least one project",
-  	"To import this file you need to have at least one collector service": "To import this file you need to have at least one collector service",
-  	"To import this file you need to have at least one analysis service": "To import this file you need to have at least one analysis service",
-  	"To import this file you need to have at least one view service": "To import this file you need to have at least one view service",
-  	"To import this file you need to have at least one alert service": "To import this file you need to have at least one alert service",
-    "Import process executed with success": "Import process executed with success"
+  "Processing": "Processing",
+  "Note: No storager configuration, this data will be accessed when needed.": "Note: No storager configuration, this data will be accessed when needed.",
+  "Data Export": "Data Export",
+  "Select the project to which you want to import the data": "Select the project to which you want to import the data",
+  "No projects found.": "No projects found.",
+  "check all items": "check all items",
+  "Select the Alert Service to be Used": "Select the Alert Service to be Used",
+  "To import this file you need to have at least one project": "To import this file you need to have at least one project",
+  "To import this file you need to have at least one collector service": "To import this file you need to have at least one collector service",
+  "To import this file you need to have at least one analysis service": "To import this file you need to have at least one analysis service",
+  "To import this file you need to have at least one view service": "To import this file you need to have at least one view service",
+  "To import this file you need to have at least one alert service": "To import this file you need to have at least one alert service",
+  "Import process executed with success": "Import process executed with success",
+  "Select the delimiter character of the CSV and choose if the file has a header": "Select the delimiter character of the CSV and choose if the file has a header",
+  "Semicolon": "Semicolon",
+  "Comma": "Comma",
+  "Select the fields": "Select the fields",
+  "folder": "folder",
+  "mask": "mask",
+  "alias": "alias",
+  "timezone": "timezone",
+  "latitude": "latitude",
+  "longitude": "longitude",
+  "projection": "projection",
+  "active": "active",
+  "DCP Import Error": "DCP Import Error",
+  "Invalid value for the field": "Invalid value for the field",
+  "in the line": "in the line",
+  "Invalid value": "Invalid value",
+  "Obs: enter the addresses separated by semicolons": "Obs: enter the addresses separated by semicolons",
+  "The values of the levels must be numeric and be in a growing order%2C and the names of the levels must be filled": "The values of the levels must be numeric and be in a growing order%2C and the names of the levels must be filled",
+  "No data found.": "No data found.",
+  "No data provider found.": "No data provider found.",
+  "No analysis found.": "No analysis found.",
+  "DCP data series is not supported yet": "DCP data series is not supported yet"
 }
