--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -185,8 +185,8 @@
 	"Project Name": "Nome do Projeto",
 	"Project version": "Versão do Projeto",
 	"Project Description": "Descrição do Projeto",
-	"Project name is required": "Nome do projeto é requerido",
-	"Project version is required": "Versão do projeto é requerida",
+	"Project name is required": "O preenchimento do nome do projeto é obrigatório",
+	"Project version is required": "O preenchimento da versão do projeto é obrigatório",
 	"Project version is not a valid number": "Versão do projeto não é um número válido",
 	"Data provider path is required for": "Diretório do servidor de dados é requerido para",
 	"Data provider path is required": "Diretório do servidor de dados é requerido",
@@ -476,7 +476,7 @@
 	"Style": "Estilo",
 	"Data Server Registration": "Registro de Servidor de Dados",
 	"Data Server Name": "Nome do Servidor de Dados",
-	"Data Server name is required": "Nome do Servidor de Dados é requerido",
+	"Data Server name is required": "O preenchimento do nome do servidor de dados é obrigatório",
 	"Data Server Description": "Descrição do Servidor de Dados",
 	"PostGis occurrence": "Ocorrência PostGIS",
 	"INPE's Wildland Fire Program": "Programa de Queimadas - INPE",
@@ -619,5 +619,100 @@
 	"Default type": "Tipo padrão",
 	"Point (Geometry)": "Ponto (Geometria)",
 	"Number": "Número",
-	"Text": "Texto"
+	"Text": "Texto",
+  "Report Title": "Título do Relatório",
+	"Import CSV": "Importar CSV",
+	"Delimiter character": "Caractere delimitador",
+	"The first line is a header?": "A primeira linha é um cabeçalho?",
+	"Format (once selected, it can't be changed)": "Formato (uma vez selecionado, não pode ser alterado)",
+	"Format (once selected, it can&#39;t be changed)": "Formato (uma vez selecionado, não pode ser alterado)",
+	"Default": "Padrão",
+	"Prefix": "Prefixo",
+	"Select a column": "Selecione uma coluna",
+	"Suffix": "Sufixo",
+	"Showing": "Exibindo de",
+	"No data available in table": "Não existem dados a serem exibidos",
+	"Select a value": "Selecione um valor",
+	"Enter default value": "Insira o valor padrão",
+	"Leave it empty": "Deixar vazio",
+	"filtered from": "filtrados de",
+	"Showing 0 to 0 of 0 entries": "Exibindo de 0 a 0 de 0 registros",
+	"entries": "registros",
+	"to": "a",
+	"of": "de",
+	"Loading": "Carregando",
+	"Show": "Exibir",
+	"total entries": "total de registros",
+	"Last": "Último",
+	"First": "Primeiro",
+	"DCP Import Process": "Processo de Importação de PCDs",
+	"Import process executed with success, but there were duplicated Alias, check the values": "Processo de importação executado com sucesso, mas existem Pseudônimos duplicados, verifique os valores",
+	"Search": "Pesquisa",
+  "Processing": "Processando",
+  "Note: No storager configuration, this data will be accessed when needed.": "Nota: Sem configuração de armazenamento, estes dados serão acessados quando necessário.",
+  "Data Export": "Exportação de Dados",
+  "Select the project to which you want to import the data": "Selecione o projeto para o qual você deseja importar os dados",
+  "No projects found.": "Nenhum projeto encontrado.",
+  "check all items": "selecionar todos os itens",
+  "Select the Alert Service to be Used": "Selecione o Serviço de Alerta a ser usado",
+  "To import this file you need to have at least one project": "Para importar este arquivo você precisa ter pelo menos um projeto",
+  "To import this file you need to have at least one collector service": "Para importar este arquivo você precisa ter pelo menos um serviço de coleta",
+  "To import this file you need to have at least one analysis service": "Para importar este arquivo você precisa ter pelo menos um serviço de análise",
+  "To import this file you need to have at least one view service": "Para importar este arquivo você precisa ter pelo menos um serviço de visualização",
+  "To import this file you need to have at least one alert service": "Para importar este arquivo você precisa ter pelo menos um serviço de alerta",
+  "Import process executed with success": "Processo de importação executado com sucesso",
+  "Select the delimiter character of the CSV and choose if the file has a header": "Selecione o caractere delimitador do CSV e informe se o arquivo tem um cabeçalho",
+  "Semicolon": "Ponto e vírgula",
+  "Comma": "Vírgula",
+  "Select the fields": "Selecione os campos",
+  "Float": "Ponto flutuante",
+  "Integer": "Inteiro",
+  "Required": "Obrigatório",
+  "folder": "pasta",
+  "mask": "máscara",
+  "alias": "pseudônimo",
+  "timezone": "fuso horário",
+  "latitude": "latitude",
+  "longitude": "longitude",
+  "projection": "projeção",
+  "active": "ativo",
+  "Conditional": "Condicional",
+  "Monitored object": "Objeto monitorado",
+  "DCP Import Error": "Erro de Importação de PCD",
+  "Invalid value for the field": "Valor inválido para o campo",
+  "in the line": "na linha",
+  "Invalid value": "Valor inválido",
+  "Obs: enter the addresses separated by semicolons": "Obs: insira os endereços separados por ponto e vírgula",
+  "Alert Name": "Nome do Alerta",
+  "Alert name is required": "O preenchimento do nome do alerta é obrigatório",
+  "Alert Description": "Descrição do Alerta",
+  "Risk Level": "Nível de Risco",
+  "Risks": "Riscos",
+  "Risk Name": "Nome do Risco",
+  "Risk Description": "Descrição do Risco",
+  "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled": "Os valores dos níveis devem ser numéricos e estar em uma ordem crescente, e os nomes dos níveis devem ser preenchidos",
+  "New Level": "Novo Nível",
+  "Report title is required": "O preenchimento do título do relatório é obrigatório",
+  "Report Description": "Descrição do Relatório",
+  "Notification": "Notificação",
+  "Emails": "Emails",
+  "Notification emails is required": "O preenchimento dos emails de notificação é obrigatório",
+  "Include Report": "Incluir Relatório",
+  "Select a report type": "Selecione um tipo de relatório",
+  "Notify on risk level": "Notificar a partir do nível",
+  "Select a level": "Selecione um nível",
+  "Notify on change": "Notificar quando houver mudança",
+  "Level Name": "Nome do Nível",
+  "Risk Value": "Valor do Risco",
+  "New Risk": "Novo Risco",
+	"Data Server Timeout": "Tempo Limite do Servidor de Dados",
+  "Data server Timeout": "Tempo Limite do Servidor de Dados",
+	"Active mode": "Modo ativo",
+  "No data found.": "Nenhum registro encontrado.",
+  "No data provider found.": "Nenhum servidor de dados encontrado.",
+  "Static GDAL grid": "Grade estática GDAL",
+  "No analysis found.": "Nenhuma análise encontrada.",
+  "Data Server protocol is required": "O preenchimento do tipo do servidor de dados é obrigatório",
+  "There are invalid fields on form": "Existem valores inválidos no formulário",
+  "DCP data series is not supported yet": "Séries de dados do tipo PCD ainda não são suportadas"
 }
